--- a/.github/workflows/ci-earthly.yml
+++ b/.github/workflows/ci-earthly.yml
@@ -83,6 +83,8 @@ jobs:
           version: v0.8.8
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       # Needed for Earthly tagging to work
       - name: Put back the git branch into git
         run: |
